<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_kunjungan"
        android:icon="@drawable/ic_nav_kunjungan"
        android:title="@string/menu_kunjungan" />

    <item
        android:id="@+id/navigation_peminjaman"
        android:icon="@drawable/ic_nav_peminjaman"
        android:title="@string/menu_peminjaman" />

    <item
        android:id="@+id/navigation_pengembalian"
        android:icon="@drawable/ic_nav_pengembalian"
        android:title="@string/menu_pengembalian" />

    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/ic_nav_riwayat"
        android:title="@string/menu_riwayat" />

    <item
        android:id="@+id/navigation_pengaturan"
        android:icon="@drawable/ic_nav_pengaturan"
        android:title="@string/menu_pengaturan" />
</menu>
